<resources>
    <string name="app_name">HLA配型</string>
    <string name="confirm_button">开始匹配</string>
    <string name="clear_button">清除重算</string>
    <string name="tip_text">本次匹配结果为：</string>
    <string name="gt_text">供体</string>
    <string name="st_text">受体</string>
    <string name="about">关于</string>
    <string name="ok">确定</string>
    <string name="about_text">HLA配型(Version 1.041)</string>
    <string name="me_text"></string>
    <string name="right">√</string>
    <string name="wrong">×</string>
    <string name="wrong_right">×√</string>
    <string name="double_wrong">××</string>
</resources>
